--- a/posts/factor-analysis-example/index.qmd
+++ b/posts/factor-analysis-example/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Tổng hợp bài tập factor analysis"
+title: "Tổng hợp bài tập factor analysis [draft]"
 author: "Duc Nguyen"
 date: last-modified
 lightbox: true
@@ -8,7 +8,7 @@ categories: [factor analysis, EFA, CFA, SEM, example]
 
 # Các bài tập mẫu
 
-Example 1
+[Example 1](https://tuhocr.github.io/tailieuthamkhao/posts/factor-analysis-example/example_1/example_1.html)
 
 # Một số định nghĩa
 
@@ -20,8 +20,47 @@ Nếu chạy trực tiếp trên raw data, ta thu được các hệ số hồi 
 
 Nếu scale/standardize raw data, ta thu được các hệ số hồi quy *standardized* regression coefficients.
 
-Phân tích về mô hình bão hòa/saturated
+# Thuật ngữ mô hình bão hòa (saturated model)
 
 <https://stats.oarc.ucla.edu/stata/faq/what-are-the-saturated-and-baseline-models-in-sem/>
 
-# Quy tắc ký hiệu
+**Quy tắc ký hiệu**
+
+Below is the diagram of a simple structural equation model. 
+
+The dependent variable is **a latent variable `Acad`** with three **observed indicators**, **`math`**, **`science`** and **`socst`**. 
+
+There are two additional observed variables, the **independent variable `female`** and the **mediator variable `read`**. 
+
+Variables in squares (hình vuông) are observed (manifest variables), biến quan sát.
+
+Variables in circles are latent, biến tiềm ẩn.
+
+The small circles with $\varepsilon$ are error terms, residual variances, phần dư.
+
+Mũi tên thể hiện chiều tác động, ví dụ `female` (giới tính) tác động đến `read` (khả năng đọc hiểu), đó là 1 mô hình hồi quy đơn giản (`y ~ x` hay là `read ~ female`), khi kiểm định mối quan hệ đường (path regression coefficient) nếu không có ý nghĩa thống kê (hệ số slope $\beta$ có p-value > 0.05) thì không có tác động giữa `female` và `read`.
+
+Ví dụ ta có hình sau:
+
+![](s1.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
