--- a/thuvien.bib
+++ b/thuvien.bib
@@ -22,7 +22,16 @@
   publisher = {Willey},
   title     = {Structural Equation Modeling with lavaan},
   year      = {2019},
+  groups    = {factor analysis},
   url       = {http://book.thuviencanhan.com/ref/factor_analysis/broc_sem_lavaan_2019.pdf},
+}
+
+@Article{hamid_2023,
+  author = {Abdalla A. R. M. Hamid and Abdullah Seif Abdullah Al Miskry and Abdel Hameed M. Darweesh},
+  title  = {The relationship between coping and distress among faculty members and students during COVID-19 pandemic lockdown: The moderating effect of gender},
+  year   = {2023},
+  groups = {mediation},
+  url    = {http://book.thuviencanhan.com/ref/factor_analysis/hamid_2023.pdf},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
@@ -32,4 +41,5 @@
 @Comment{jabref-meta: grouping:
 0 AllEntriesGroup:;
 1 StaticGroup:factor analysis\;0\;1\;\;\;\;;
+1 StaticGroup:mediation\;0\;1\;\;\;\;;
 }
