--- a/thuvien.bib
+++ b/thuvien.bib
@@ -34,6 +34,27 @@
   url    = {http://book.thuviencanhan.com/ref/factor_analysis/hamid_2023.pdf},
 }
 
+@Article{zhang_2015,
+  author  = {Zhiyong Zhang and Fumiaki Hamagami and Kevin J. Grimm and and John J. McArdle},
+  journal = {Structural Equation Modeling: A Multidisciplinary Journal},
+  title   = {Using R Package RAMpath for Tracing SEM PathDiagrams and Conducting Complex LongitudinalData Analysis},
+  year    = {2015},
+  groups  = {mediation},
+  url     = {http://book.thuviencanhan.com/ref/factor_analysis/zhang_2014.pdf},
+}
+
+@Article{aung_2020,
+  author    = {Aung, Max T. and Song, Yanyi and Ferguson, Kelly K. and Cantonwine, David E. and Zeng, Lixia and McElrath, Thomas F. and Pennathur, Subramaniam and Meeker, John D. and Mukherjee, Bhramar},
+  journal   = {Nature Communications},
+  title     = {Application of an analytical framework for multivariate mediation analysis of environmental data},
+  year      = {2020},
+  number    = {1},
+  volume    = {11},
+  groups    = {mediation},
+  publisher = {Springer Science and Business Media LLC},
+  url       = {http://book.thuviencanhan.com/ref/factor_analysis/aung_2020.pdf},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: fileDirectoryLatex-Admin-DESKTOP-E3K3O4J:G:\\FTP\\tree;}
