--- a/thuvien.bib
+++ b/thuvien.bib
@@ -55,6 +55,25 @@
   url       = {http://book.thuviencanhan.com/ref/factor_analysis/aung_2020.pdf},
 }
 
+@TechReport{frazier_2004,
+  author    = {Patricia A. Frazier and Andrew P. Tix and Kenneth E. Barron},
+  title     = {Testing Moderator and Mediator Effects in Counseling Psychology Research},
+  year      = {2004},
+  number    = {such},
+  groups    = {mediation},
+  publisher = {Journal of Counseling Psychology Copyright 2004 by the American Psychological Association, Inc. 2004, Vol. 51, No. 1, 115–134 0022-0167/04/$12.00 DOI: 10.1037/0022-0167.51.1.115},
+  url       = {http://book.thuviencanhan.com/ref/mediation/frazier_2004.pdf},
+}
+
+@InProceedings{aiken_west_1991,
+  author   = {Leona S. Aiken},
+  title    = {Multiple Regression: Testing and Interpreting Interactions},
+  year     = {1991},
+  groups   = {mediation},
+  language = {eng},
+  url      = {http://book.thuviencanhan.com/ref/mediation/aiken_west_1991.pdf},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: fileDirectoryLatex-Admin-DESKTOP-E3K3O4J:G:\\FTP\\tree;}
