--- a/thuvien.bib
+++ b/thuvien.bib
@@ -27,11 +27,12 @@
 }
 
 @Article{hamid_2023,
-  author = {Abdalla A. R. M. Hamid and Abdullah Seif Abdullah Al Miskry and Abdel Hameed M. Darweesh},
-  title  = {The relationship between coping and distress among faculty members and students during COVID-19 pandemic lockdown: The moderating effect of gender},
-  year   = {2023},
-  groups = {mediation},
-  url    = {http://book.thuviencanhan.com/ref/factor_analysis/hamid_2023.pdf},
+  author  = {Abdalla A. R. M. Hamid and Abdullah Seif Abdullah Al Miskry and Abdel Hameed M. Darweesh},
+  journal = {Frontiers in Psychiatry},
+  title   = {The relationship between coping and distress among faculty members and students during COVID-19 pandemic lockdown: The moderating effect of gender},
+  year    = {2023},
+  groups  = {mediation},
+  url     = {http://book.thuviencanhan.com/ref/factor_analysis/hamid_2023.pdf},
 }
 
 @Article{zhang_2015,
@@ -55,23 +56,32 @@
   url       = {http://book.thuviencanhan.com/ref/factor_analysis/aung_2020.pdf},
 }
 
-@TechReport{frazier_2004,
+@Article{frazier_2004,
   author    = {Patricia A. Frazier and Andrew P. Tix and Kenneth E. Barron},
+  journal   = {Journal of Counseling Psychology},
   title     = {Testing Moderator and Mediator Effects in Counseling Psychology Research},
   year      = {2004},
-  number    = {such},
   groups    = {mediation},
   publisher = {Journal of Counseling Psychology Copyright 2004 by the American Psychological Association, Inc. 2004, Vol. 51, No. 1, 115–134 0022-0167/04/$12.00 DOI: 10.1037/0022-0167.51.1.115},
   url       = {http://book.thuviencanhan.com/ref/mediation/frazier_2004.pdf},
 }
 
-@InProceedings{aiken_west_1991,
+@Book{aiken_west_1991,
   author   = {Leona S. Aiken},
   title    = {Multiple Regression: Testing and Interpreting Interactions},
   year     = {1991},
   groups   = {mediation},
   language = {eng},
   url      = {http://book.thuviencanhan.com/ref/mediation/aiken_west_1991.pdf},
+}
+
+@Article{eisinga_2012,
+  author  = {Rob Eisinga and Manfred te Grotenhuis and Ben Pelzer},
+  journal = {Int J Public Health},
+  title   = {The reliability of a two-item scale: Pearson, Cronbach or Spearman-Brown?},
+  year    = {2012},
+  groups  = {factor analysis},
+  url     = {http://book.thuviencanhan.com/ref/factor_analysis/eisinga_2012.pdf},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
